--- a/_posts/2019-12-28-the-us-narrative-today.html
+++ b/_posts/2019-12-28-the-us-narrative-today.html
@@ -583,107 +583,107 @@ stories:
   domain: http://www.frontiersman.com/
   link: https://www.frontiersman.com/national/entertainment/duane-dog-chapman-is-seeing-a-shrink/image_8eeadc08-15dd-5599-bf29-dac2bc3e5a5c.html
 images:
-- name: oldcabin-store-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-crabapple.jpg
-- name: window-window-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-purple-pond.jpg
-- name: store-on-corner-store-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-satan-red.jpg
-- name: copper-circuit-DSC_0048.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-DSC_0048.jpg
-- name: old-barn-old-barn-1500-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-blue-granite.jpg
-- name: nazi-invasion-crypto-wheels-old-compute-bletchley.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-crypto-wheels-old-compute-bletchley.jpg
-- name: old-cabin-oldcabin-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-colorful-dream.jpg
-- name: nazi-invasion-IMG_7162.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-IMG_7162.jpg
-- name: scream-IMG_7916.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/scream-IMG_7916.jpg
-- name: oldsmallboat-oldsmallboat-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-pablo-blue.jpg
-- name: ellis-island-ellisisland-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-ww2-color.jpg
-- name: old-school-house-old-schoolhouse-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-sunday.jpg
-- name: bf-skinner-gauge-on-aircraft-carrier.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-gauge-on-aircraft-carrier.jpg
-- name: crow_dry_skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_dry_skin.jpg
-- name: yosemite-yosemite-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-rainbow-festival.jpg
-- name: oldhouse-oldhouse-copper-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-copper-circuit.jpg
-- name: bf-skinner-bridge-over-columbia.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-bridge-over-columbia.jpg
-- name: san-francisco-skyline-night-san-francisco-skyline-night-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-cinnamon-rolls.jpg
-- name: oldhotel-oldhotel-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-deep-connections.jpg
-- name: redondo-beach-harbor-redondo-beach-harbor-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-colorful-blocks.jpg
-- name: la-muse-eiphel-tower-paris-brown.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-eiphel-tower-paris-brown.jpg
-- name: blossombar-crafty-painting-file-00-00-50-18.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-crafty-painting-file-00-00-50-18.jpg
-- name: server-cloud-server-racks-clouds-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-yellow-paper.jpg
-- name: subway-subway-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-dark-rain.jpg
-- name: rain-princess-DSC_0013.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-DSC_0013.jpg
-- name: subway-subway-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-gred-mash.jpg
-- name: old-church-oldchurch-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-dali-three.jpg
-- name: nyc-flag-nycflag-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-atari-missle.jpg
-- name: fast-lights-freeway-redes-fast-flux-623x425-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-emily-carr.jpg
-- name: gypsymosaic-gypsy-eyes-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-aqua.jpg
-- name: oldtrain-oldtrain-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-really-hot.jpg
-- name: hollywood-building-hollywood-building-blue-circuit-4.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-blue-circuit-4.jpg
-- name: stalin-time-british-guards-marching.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-british-guards-marching.jpg
-- name: downtown-trucksilo-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-creativity.jpg
-- name: mistywoods-babyfoot-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-atari-missle.jpg
-- name: oldroad-old-road-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-crabapple.jpg
-- name: hollywood-building-hollywood-building-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-diego-rivera1.jpg
-- name: paris-paris-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-gred-mash.jpg
-- name: fence-fence-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-sand-paper.jpg
-- name: store-on-corner-store-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-mucha-mult.jpg
-- name: hollywood-building-hollywood-building-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-dali-two.jpg
-- name: crow-crow-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-mucha-mult.jpg
-- name: liberty-back-statue-liberty-back-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-colorful-blocks.jpg
-- name: aws-s3-square-C18YCQlUUAQjxRe.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-C18YCQlUUAQjxRe.jpg
-- name: border-crossing-bordercrossing-colored-circuits.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-colored-circuits.png
-- name: liberty-back-statue-liberty-back-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-gan-vogh.jpg
-- name: subway-subway-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-satan-red.jpg
-- name: crow-crow-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-gred-mash.jpg
-- name: server-cloud-server-racks-clouds-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-blue-circuit.jpg
-- name: white-house-lawn-white-house-window-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-neo-instinct.jpg
-- name: aws-s3-stories-new-server-cloud1-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-server-cloud1-internet-numbers.jpg
+- name: nazi-invasion-butterfly-purple-flower.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-butterfly-purple-flower.jpg
+- name: nyc-flag-nycflag-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-dali-two.jpg
+- name: la-muse-nyc-skyline-from-ferry.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-nyc-skyline-from-ferry.jpg
+- name: carry-load-carryload-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-spagetti-accident.jpg
+- name: abandonedbuildings_alberto_giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_alberto_giacometti.jpg
+- name: meadowbutterfly-meadow-butterfly-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-light-dali.jpg
+- name: aws-s3-square-C4NLtWrWMAAMY9d-square.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-C4NLtWrWMAAMY9d-square.jpg
+- name: braceros-domingo-ulloa-downtown-125thstreet.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-downtown-125thstreet.jpg
+- name: stalin-time-capital-records-building.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-capital-records-building.jpg
+- name: oldcabin-oldcabin-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-kand-two.jpg
+- name: nazi-invasion-san-francisco-skyline.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-san-francisco-skyline.jpg
+- name: old-church-oldchurch-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-light-dali.jpg
+- name: store-on-corner-oldcabin-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-crunch-paper.jpg
+- name: statue-of-liberty-front-view-statueofliberty-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-emily-carr.jpg
+- name: old-barn-old-barn-1500-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-purp-paper.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-copper-circuit-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-copper-circuit-2.jpg
+- name: san-francisco-street-view-san-francisco-street-view-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-dark-soul.jpg
+- name: old-granary-field-granaryfield-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-dark-soul.jpg
+- name: aws-s3-stories-castle-walls-cannon-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-castle-walls-cannon-satan-red.jpg
+- name: mistywoods-babyfoot-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-crunch-paper.jpg
+- name: border-fence-border-fence-on-hill-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-ww2-dresden.jpg
+- name: curtain-curtain-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-diego-rivera1.jpg
+- name: oldhouse-oldhouse-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-really-hot.jpg
+- name: oldsmallboat-oldsmallboat-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-rainbow-festival.jpg
+- name: locked-up-steam-lock-up-steam-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-hot-spicy.jpg
+- name: old-cabin-oldcabin-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-alberto-giacometti.jpg
+- name: beach-clouds-lifeguard-beachclouds-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-really-hot.jpg
+- name: school-clouds-church-clouds-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-colorful-blocks.jpg
+- name: store-on-corner-oldcabin-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-yellow-collage.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-blue-brush.jpg
+- name: bf-skinner-flowers-diamon-creek.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-flowers-diamon-creek.jpg
+- name: docks-docks-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-smooth-ride.jpg
+- name: stalin-time-palace-water-fountain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-palace-water-fountain.jpg
+- name: subway-subway-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-really-hot.jpg
+- name: long-factory-uncle-sam.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/long-factory-uncle-sam.jpg
+- name: cargo-ship-cargo-ship-on-sea-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-dark-dali.jpg
+- name: beach-clouds-lifeguard-beachclouds-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-bright-sand.jpg
+- name: paris-paris-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-matrix.jpg
+- name: la-muse-downtown-la_36349151230_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-downtown-la_36349151230_o.jpg
+- name: blossombar-creativity-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-creativity-file-00-00-00-00.jpg
+- name: powerlines-power-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-crafty-painting.jpg
+- name: aws-s3-stories-border-traffic.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-border-traffic.jpg
+- name: lincoln-memorial-lincolnmemorial-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-graham-sutherland.jpg
+- name: adam-smith-adam-smith-propaganda-leaflets.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-propaganda-leaflets.jpg
+- name: oldsmallboat-oldsmallboat-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-satan-red.jpg
+- name: dragon-desert-desert-dragon-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-diego-rivera1.jpg
+- name: rockingchair-rockingchair-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-creativity.jpg
+- name: legal-statue-legalstatue-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-atari-missle.jpg
+- name: la-muse-cemetery_35902984304_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-cemetery_35902984304_o.jpg
+- name: copper-circuit-working-on-railroad-1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-working-on-railroad-1.jpg
+- name: stalin-time-train-coming-up-tracks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-train-coming-up-tracks.jpg
 ---
 Park City Police Find Homeless Camp That Appears To Have Been Recently Used.&nbsp;Memphis To Meet Penn State In Goodyear Cotton Bowl Classic.&nbsp;Respecting Boundaries At Church.&nbsp;Emma Watson Compares Taylor Swift To Little Women's Jo March.&nbsp;Top Offensive Effort Sparks Storm.&nbsp;Notes From The Traffic Safety Committee Meeting.&nbsp;Wedding Dance Dendrochronological Analysis.&nbsp;Shooting At Mall In Denver Suburb Wounds 1; No Arrests Made.&nbsp;
